--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerPlate.ejs")-%>
+<% layout("/layouts/boilerplate.ejs")-%>
 
 <div class="row mb-3">
   <div class="col-8 offset-2">
