--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerPlate") -%>
+<% layout("/layouts/boilerplate") -%>
 
 <div class="row mb-3">
   <h1 class="col-6 offset-3">login</h1>
